--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: MCHDL CI
+name: Windows CI
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -24,7 +24,7 @@ jobs:
       
     # Installs PIP Modules
     - name: Install PIP Modules
-      run: python -m pip install -r requirements
+      run: python -m pip install -r requirements.txt
       
     # Build Project
     - name: Build Project
